Revert "Fix channel list scrollbar (#267)" (#268)
This reverts commit e7ef485cc1ef2a76236abb7e67e218b568f39430.

--- a/src/app-sandbox/styles.scss
+++ b/src/app-sandbox/styles.scss
@@ -62,10 +62,6 @@ $speed: animation.$animation-duration;
     &__content {
       opacity: 1;
       transition: opacity animation.$animation-duration-quadruple ease-in;
-
-      overflow-y: auto;
-      overflow-x: hidden;
-      height: inherit;
     }
 
     &.closed {
